Prevent the focus on IOS

--- a/src/component/map.css
+++ b/src/component/map.css
@@ -276,6 +276,17 @@ body {
     height: 44px;
     font-size: 13px;
   }
+  html {
+    margin: 0;
+    overflow: hidden;
+    height: 100%;
+  }
+  body {
+    margin: 0;
+    overflow: auto;
+    height: 100%;
+    -webkit-overflow-scrolling: touch;
+  }
 }
 /* Surgace Pro */
 @media only screen and (max-width: 1400px) {
